--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
+Flask
 requests
 pandas
-langchain
-langchain-community
-langchain-classic
-langchain-google-genai
 python-dotenv
-langchain-core
-google-generativeai
+# Core LLM and Agent Dependencies
+langchain
+langchain-google-genai
+gunicorn
